# audio-dsp

./: Cargo.toml  README.md
cli-app/: Cargo.toml  some.erl  some.html
cli-app/src/: args.rs  command.rs  command_dispatch.rs  command_dispatchers.rs  command_dispatchers_provider.rs  command_parser.rs  command_processor.rs  dispatch_provider.rs  dispatcher_enum.rs  dispatchers.rs  envelope.rs  lib.rs  main.rs  processor.rs  scheduler.rs  schema.drawio  state.rs  track.rs
cli-app/src/dispatchers/: copy.rs  delete.rs  gain.rs  high_pass.rs  info.rs  list.rs  load.rs  low_pass.rs  mod.rs  normalize.rs  upload.rs
cli-app/tests/: command_processor_test.rs  common.rs
dsp-actors/: Cargo.toml  mod.rs
dsp-actors/src/: lib.rs
dsp-actors/src/audio_player_actor/: audio_player_actor.rs  audio_player_actor_state.rs  audio_player_actork.rs  mod.rs
dsp-actors/src/tests/: mod.rs  user_actor_test.rs
dsp-actors/src/user_actor/: user_actor.rs
dsp-actors/user_actor/: mod.rs
dsp-core/: Cargo.toml
dsp-core/src/: api.rs  command_dispatch.rs  command_processor.rs  dispatcher_enum.rs  dispatchers_provider.rs  lib.rs  state.rs
dsp-core/src/actors/: mod.rs
dsp-core/src/crud_dispatchers/: copy.rs  delete.rs  info.rs  insert.rs  list.rs  load.rs  mod.rs  run_script.rs  upload.rs
dsp-core/src/dispatchers/: copy.rs  delete.rs  gain.rs  high_pass.rs  info.rs  list.rs  load.rs  low_pass.rs  mod.rs  normalize.rs  run_script.rs  upload.rs
dsp-core/src/dsp_dispatchers/: gain.rs  high_pass.rs  low_pass.rs  mod.rs  normalize.rs
dsp-core/src/player_dispatchers/: mod.rs  pause_dispatcher.rs  play_dispatcher.rs  stop_dispatcher.rs
dsp-core/src/player_registry/: mod.rs  (+2 more)
(+96 files in other folders)
