[package]
name="cli-app"
version="0.1.0"
edition="2021"

[dependencies]
audiolib={path="../audiolib"}
dsp-core={path="../dsp-core"}
dsp-domain={path="../dsp-domain"}
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
