[package]
name="dsp-actors"
version="0.1.0"
edition = "2021"

[dependencies]
dsp-core={path="../dsp-core"}
dsp-domain={path="../dsp-domain"}
rstest="0.25"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-std = { version = "1", features = ["attributes"] }
actix-rt = "2"
actix="0.13"