[package]
name="dsp-core"
version="0.1.0"
edition ="2021"

[dependencies]
audiolib={path="../audiolib"}
dsp-domain={path = "../dsp-domain"}
player={path="../player"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rstest="0.25"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
async-std = { version = "1", features = ["attributes"] }